--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,31 @@
 
 body{ margin: 0; }
 form{ margin: 0; }
-.page{ display: flex; flex-direction: column; height: 100%; }
-.row{ display: flex; }
-.expando{ flex: auto; overflow-y: auto; }
-.page header { background: #ccc; padding: 10px; }
+.page{ display: -webkit-flex; display: flex; flex-direction: column; -webkit-flex-direction: column; height: 100%; }
+.row{ display: -webkit-flex; display: flex; }
+.expando{ -webkit-flex: auto; flex: auto; overflow-y: auto; }
+.page header { background: #eee; padding: 10px; }
 .page .panel { background: #ccf; padding: 10px; }
 header h3, .panel h3 { margin: 0; font-variant: small-caps; font-size: 14px; font-family: optima; color: #555; }
 h1 { margin: 0; font-size: 15px; font-family: optima; color: #333; }
+
+#show_room h1, #show_room h3 { display: inline-block; }
+
+#show_room header { color: #555; }
+
+#edit_settings { float: right; }
+
+.room_tile {
+	display:inline-block;
+	width: 80px;
+	height: 80px;
+	border: solid thin #777;
+	padding: 3px;
+	margin: 3px;
+	vertical-align: top;
+	overflow: hidden;
+	text-align: center;
+}
 
 .page .message {
 	padding: 5px 10px;
@@ -25,4 +43,9 @@ h1 { margin: 0; font-size: 15px; font-family: optima; color: #333; }
 .message .action {
 	color: blue;
 	font-weight: bold;
+}
+
+.message i {
+	font-style: normal;
+	color: #6f6f6f;
 }
