--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,10 @@
 /*styles.css*/
 
-body{ margin: 0; }
+body{ margin: 0; font-family: helvetica; }
 form{ margin: 0; }
 .page{ display: -webkit-flex; display: flex; flex-direction: column; -webkit-flex-direction: column; height: 100%; }
 .row{ display: -webkit-flex; display: flex; }
 .expando{ -webkit-flex: auto; flex: auto; overflow-y: auto; }
-.page header { background: #eee; padding: 10px; }
 .page .panel { background: #ccf; padding: 10px; }
 header h3, .panel h3 { margin: 0; font-variant: small-caps; font-size: 14px; font-family: optima; color: #555; }
 h1 { margin: 0; font-size: 15px; font-family: optima; color: #333; }
@@ -14,18 +13,22 @@ h1 { margin: 0; font-size: 15px; font-family: optima; color: #333; }
 
 #show_room header { color: #555; }
 
-#edit_settings { float: right; }
-
-.room_tile {
+.room_card {
 	display:inline-block;
 	width: 80px;
-	height: 80px;
-	border: solid thin #777;
-	padding: 3px;
-	margin: 3px;
+	height: 94px;
+	margin: 3px 10px;
+	text-align: center;
+	vertical-align:top;
+}
+.room_tile {
+	height: 68px;
+	padding: 6px 3px;
 	vertical-align: top;
 	overflow: hidden;
-	text-align: center;
+	border-radius: 5px;
+	background: #B4D9E7;
+	box-shadow:  black 0px 1px 2px;
 }
 
 .page .message {
@@ -48,4 +51,160 @@ h1 { margin: 0; font-size: 15px; font-family: optima; color: #333; }
 .message i {
 	font-style: normal;
 	color: #6f6f6f;
+}
+
+div.player.panel {
+	background: black;
+	min-height: 40px;
+	padding: 0;
+}
+
+.page header {
+	background: #253E72;
+	box-shadow: black 0px 1px 2px;
+	z-index: 1;
+	min-height: 44px;
+	display: -webkit-flex; display: flex;
+	justify-content: space-between;
+	-webkit-justify-content: space-between;
+}
+
+header button {
+	margin:0;
+	-webkit-appearance: none;
+	background: none;
+	border:none;
+	color:white;
+	font-weight: bold;
+/*	background: rgba(255,255,255,0.3);*/
+	border-left: solid thin rgba(255,255,255,0.3);;
+	border-right: solid thin rgba(255,255,255,0.3);;
+	padding: 0px 14px;
+}
+
+header button big {
+	font-size: 30px;
+	line-height: 10px;
+}
+
+span.label {
+text-transform: uppercase;
+border-radius: 5px;
+background: rgb(1, 77, 7);
+padding: 3px 6px;
+font-size: 11px;
+font-family: helvetica;
+color: white;
+box-shadow: inset black 0px 0px 3px;
+font-weight: bold;
+text-shadow: black 0px 0px 2px;
+float:right;
+}
+
+.panel.centered { text-align: center; }
+
+.people.panel {
+	padding: 2px;
+	background: rgb(213, 213, 213);
+	box-shadow: inset black 0px 0px 6px;
+}
+
+#room_requires {
+	margin-left: 10px;
+}
+
+#room_requires img {
+	max-height: 12px;
+}
+
+#room_play, #room_settings_play {
+	background: url(/img/play.png) black;
+	background-repeat: no-repeat;
+	background-position: 50%;
+	border: none;
+	color: transparent;
+	-webkit-appearance: none;
+	border:none;
+}
+
+#room_rewind, #room_settings_rewind {
+	background: url(/img/rew.png) black;
+	background-repeat: no-repeat;
+	background-position: 50%;
+	border: none;
+	color: transparent;
+	-webkit-appearance: none;
+	border:none;
+
+}
+
+#room_settings_next {
+background: url(/img/ff.png) black;
+background-repeat: no-repeat;
+background-position: 50%;
+border: none;
+color: transparent;
+-webkit-appearance: none;
+border:none;
+
+}
+
+a.toggle {
+	float:right;
+	display:block;
+	height: 30px;
+	width: 50px;
+	background-size: cover;
+}
+
+a.toggle.on {
+	background-image: url(/img/on.png);
+}
+a.toggle.off {
+	background-image: url(/img/off.png);
+}
+
+.white.panel { background: white; }
+
+.togrow {
+	min-height: 30px;
+	font-size: 20px;
+	line-height: 34px;
+	margin-left: 10px;
+	border-top: solid thin #ccc;
+	padding-top: 4px;
+	font-family: helvetica;
+	color: #666;
+	margin-top:5px;
+}
+
+#room_attributes li {
+list-style: none;
+margin: 0px 20px;
+font-size: 12px;
+padding-bottom: 3px;
+}
+
+.room_tile i {
+display: block;
+font-size: 10px;
+color: #838383;
+font-style: normal;
+text-shadow: rgba(255,255,255,0.8) 0px 1px 1px;
+}
+
+.room_tile b {
+display: block;
+font-family: helvetica;
+font-size: 13px;
+}
+
+.room_card .members_text {
+	font-size: 10px;
+	color: #838383;
+	margin-top:2px;
+}
+
+#rooms_list {
+	margin-top: 8px;
 }
