--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,8 @@ h1 { margin: 0; font-size: 15px; font-family: optima; color: #333; }
 	overflow: hidden;
 	border-radius: 5px;
 	background: #B4D9E7;
-	box-shadow:  black 0px 1px 2px;
+/*	box-shadow:  rgb(138, 138, 138) 0px 1px 2px;*/
+	box-shadow: rgb(14, 158, 170) 0px 0px 4px 1px;
 }
 
 .page .message {
@@ -207,4 +208,12 @@ font-size: 13px;
 
 #rooms_list {
 	margin-top: 8px;
+}
+
+.room_tile span {
+position: absolute;
+bottom: 0;
+right: 3;
+color: white;
+text-shadow: #666 0px -1px 1px;
 }
