--- a/styles.css
+++ b/styles.css
@@ -9,15 +9,14 @@ form{ margin: 0; }
 header h3, .panel h3 { margin: 0; font-variant: small-caps; font-size: 14px; font-family: optima; color: #555; }
 h1 {
 	font-family: optima;
-
-margin: 0;
-font-size: 20px;
-font-family: optima;
-color: #F3F0F0;
-align-self: center;
-vertical-align: baseline;
-text-align: center;
-text-shadow: black 0px -1px 0px;
+	margin: 0;
+	font-size: 20px;
+	font-family: optima;
+	color: #F3F0F0;
+	align-self: center;
+	-webkit-align-self: center;
+	text-align: center;
+	text-shadow: black 0px -1px 0px;
 }
 
 #show_room h1, #show_room h3 { display: inline-block; }
@@ -40,7 +39,7 @@ text-shadow: black 0px -1px 0px;
 	border-radius: 5px;
 	background: #B4D9E7;
 /*	box-shadow:  rgb(138, 138, 138) 0px 1px 2px;*/
-	box-shadow: rgb(14, 158, 170) 0px 0px 4px 1px;
+	box-shadow: rgb(14, 158, 170) 0px 0px 2px 1px;
 	position: relative;
 }
 
@@ -223,9 +222,9 @@ font-size: 13px;
 }
 
 .room_tile span {
-position: absolute;
-bottom: 0;
-right: 5;
-color: white;
-text-shadow: #666 0px -1px 1px;
+	position: absolute;
+	bottom: 0;
+	right: 5;
+	color: white;
+	text-shadow: #666 0px -1px 0px;
 }
