--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,7 @@ float:right;
 	background-repeat: no-repeat;
 	background-position: 50%;
 	border: none;
-	color: transparent;
+	color: white;
 	-webkit-appearance: none;
 	border:none;
 }
