--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 /*styles.css*/
 
 body{ margin: 0; font-family: helvetica; }
@@ -247,4 +248,31 @@ font-size: 13px;
 
 input.expando {
 	padding: 2px 10px;
+}
+
+h1 small {
+display: block;
+font-size: 11px;
+}
+
+#room_backlinks {
+text-align: right;
+font-size: 12px;
+margin: 10px;
+color: #666;
+}
+
+#room_song_title{
+	color: #ccc;
+	align-self: center;
+	font-size: 12px;
+	padding-right: 10px;
+}
+
+#room_author_note {
+border-left: solid 5px red;
+margin: 10px;
+padding: 5px;
+color: #555;
+font-size: 12px;
 }
