--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ form{ margin: 0; }
 header h3, .panel h3 {
 	margin: 0; font-variant: small-caps; font-size: 14px; font-family: optima; color: #9C9C9C;
 }
+
 h1 {
 	font-family: optima;
 	margin: 0;
@@ -20,6 +21,7 @@ h1 {
 	-webkit-align-self: center;
 	text-align: center;
 	text-shadow: black 0px -1px 0px;
+	-webkit-flex: auto; flex: auto; overflow-y: auto;
 }
 
 h2 {
@@ -289,4 +291,10 @@ margin: 10px;
 padding: 5px;
 color: #555;
 font-size: 12px;
+}
+
+.panel > button {
+width: 100%;
+height: 40px;
+margin-top: 10px;
 }
