--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,10 @@
 body{ margin: 0; font-family: helvetica; }
 form{ margin: 0; }
 .page{ display: -webkit-flex; display: flex; flex-direction: column; -webkit-flex-direction: column; height: 100%; }
-.row{ display: -webkit-flex; display: flex; }
-.expando{ -webkit-flex: auto; flex: auto; overflow-y: auto; }
+.page > div{ -webkit-flex: 0 0 auto; flex: 0 0 auto; }
+.row{ display: -webkit-flex; display: flex; position: relative; }
+.expando{ -webkit-flex: auto; flex: auto; }
+.page > .expando { -webkit-flex: auto; flex: auto; overflow-y: auto; }
 .page .panel { background: #ccf; padding: 10px; }
 header h3, .panel h3 {
 	margin: 0; font-variant: small-caps; font-size: 14px; font-family: optima; color: #9C9C9C;
@@ -105,6 +107,7 @@ header button {
 	border-left: solid thin rgba(255,255,255,0.3);;
 	border-right: solid thin rgba(255,255,255,0.3);;
 	padding: 0px 14px;
+	position: relative;
 }
 
 header button big {
@@ -135,12 +138,19 @@ float:right;
 }
 
 #room_requires {
-	margin-left: 10px;
+	position: absolute;
+	bottom: 2px;
 }
 
 #room_requires img {
 	max-height: 12px;
 }
+
+#room_lock_icon img{
+	max-height: 20px;
+	margin-bottom: 10px;
+}
+
 
 #room_play, #room_settings_play, #room_rewind, #room_settings_rewind, #room_settings_next {
 	border: none;
@@ -263,7 +273,8 @@ margin-right: -1px;
 }
 
 input.expando {
-	padding: 2px 10px;
+	padding: 8px 10px;
+	font-size: 32px;
 }
 
 h1 small {
@@ -293,8 +304,23 @@ color: #555;
 font-size: 12px;
 }
 
-.panel > button {
+div.panel > button {
 width: 100%;
 height: 40px;
 margin-top: 10px;
+}
+
+a.closex{
+position: absolute;
+top: -3px;
+font-size: 20px;
+right: 5px;
+text-decoration: none;
+color: rgb(125, 125, 214);
+border: solid thin rgb(144, 144, 151);
+border-radius: 50px;
+width: 20px;
+height: 20px;
+text-align: center;
+line-height: 20px;
 }
