--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ form{ margin: 0; }
 .expando{ -webkit-flex: auto; flex: auto; }
 .page > .expando { -webkit-flex: auto; flex: auto; overflow-y: auto; }
 .page .panel { background: #ccf; padding: 10px; }
+.tight.panel { padding: 2px 10px; }
 header h3, .panel h3 {
 	margin: 0; font-variant: small-caps; font-size: 14px; font-family: optima; color: #9C9C9C;
 }
@@ -80,7 +81,7 @@ h2 {
 	color: #6f6f6f;
 }
 
-div.player.panel {
+div.player{
 	background: black;
 	min-height: 40px;
 	padding: 0;
@@ -220,10 +221,6 @@ font-size: 13px;
 	margin-top:2px;
 }
 
-#rooms_list {
-	margin-top: 8px;
-}
-
 .room_tile span {
 	position: absolute;
 	bottom: 0;
@@ -323,4 +320,23 @@ width: 20px;
 height: 20px;
 text-align: center;
 line-height: 20px;
+}
+
+#genres {
+  text-align:center;
+}
+
+#genres button {
+  width: 45%;
+  margin-top:5px;
+  min-height: 40px;
+}
+
+.room_tile.create_room {
+  background: white;
+}
+
+.room_tile big {
+  display: block;
+  font-size: 36px;
 }
