--- a/styles.css
+++ b/styles.css
@@ -340,3 +340,17 @@ line-height: 20px;
   display: block;
   font-size: 36px;
 }
+
+button.toggle_room_add_options {
+	border: none;
+	color: red;
+	-webkit-appearance: none;
+	background: black;
+  margin-right: 5px;
+  -webkit-transition: -webkit-transform 0.2s;
+}
+
+button.toggle_room_add_options.open {
+  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+}
