--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ form{ margin: 0; }
 .page > div{ -webkit-flex: 0 0 auto; flex: 0 0 auto; }
 .row{ display: -webkit-flex; display: flex; position: relative; }
 .expando{ -webkit-flex: auto; flex: auto; }
-.page > .expando { -webkit-flex: auto; flex: auto; overflow-y: auto; }
+.page > .expando { -webkit-flex: auto; flex: auto; overflow-y: auto; -webkit-overflow-scrolling: touch; }
 .page .panel { background: #ccf; padding: 10px; }
 .tight.panel { padding: 2px 10px; }
 header h3, .panel h3 {
@@ -326,11 +326,17 @@ line-height: 20px;
   text-align:center;
 }
 
-#genres button {
+#genres button, #playlists button {
   width: 45%;
   margin-top:5px;
   min-height: 40px;
 }
+
+#playlists a {
+  font-size: 12px;
+  color:blue;
+}
+
 
 .room_tile.create_room {
   background: white;
@@ -339,6 +345,7 @@ line-height: 20px;
 .room_tile big {
   display: block;
   font-size: 36px;
+  line-height: 0.8em;
 }
 
 button.toggle_room_add_options {
@@ -353,4 +360,14 @@ button.toggle_room_add_options {
 button.toggle_room_add_options.open {
   transform: rotate(180deg);
   -webkit-transform: rotate(180deg);
+}
+
+#search_input {
+	padding: 8px 10px;
+	font-size: 32px;
+}
+
+#player_title{
+  font-size:11px;
+  margin: 3px;
 }
