--- a/styles.css
+++ b/styles.css
@@ -279,7 +279,7 @@ display: block;
 font-size: 11px;
 }
 
-#room_backlinks {
+#room_backlinks_div {
 text-align: right;
 font-size: 12px;
 margin: 10px;
@@ -370,4 +370,17 @@ button.toggle_room_add_options.open {
 #player_title{
   font-size:11px;
   margin: 3px;
+}
+
+#rooms center {
+  margin-top: 7px;
+  color: #888;
+  font-variant: small-caps;
+  font-weight: bold;
+}
+
+#rooms center b {
+  text-decoration: underline;
+  color: blue;
+  text-transform: lowercase;
 }
