--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,7 @@ h2 {
 	line-height: 2;
 	font-size: 14px;
 	padding: 2px 10px;
+  margin: 0px;
 }
 
 .message .action {
@@ -277,6 +278,7 @@ input.expando {
 h1 small {
 display: block;
 font-size: 11px;
+color:#bbb;
 }
 
 #room_backlinks_div {
@@ -289,22 +291,30 @@ color: #666;
 #room_song_title{
 	color: #ccc;
 	align-self: center;
-	font-size: 12px;
-	padding-right: 10px;
+	font-size: 11px;
+	padding: 0px 10px;
+  text-align: center;
 }
 
 #room_author_note {
-border-left: solid 5px red;
-margin: 10px;
-padding: 5px;
-color: #555;
-font-size: 12px;
+margin: 10px 10px;
+padding: 5px 15px;
+color: #5A5757;
+font-size: 11px;
+background: #D9DBE7;
+border-radius: 3px;
+box-shadow: #99a 0px 0px 3px 1px;
+line-height: 0.8em;
 }
 
 div.panel > button {
 width: 100%;
 height: 40px;
 margin-top: 10px;
+}
+
+.tight.panel > button {
+  margin-top: 0;
 }
 
 a.closex{
@@ -349,12 +359,15 @@ line-height: 20px;
 }
 
 button.toggle_room_add_options {
-	border: none;
-	color: red;
-	-webkit-appearance: none;
-	background: black;
-  margin-right: 5px;
+  border: none;
+  -webkit-appearance: none;
+  background: #ccf;
+  margin: 2px;
   -webkit-transition: -webkit-transform 0.2s;
+  width: 40px;
+  font-size: 20px;
+  color: black;
+  margin-bottom: 0px;
 }
 
 button.toggle_room_add_options.open {
