--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ h2 {
 	line-height: 2;
 	font-size: 14px;
 	padding: 2px 10px;
-  margin: 0px;
+  margin: 3px;
 }
 
 .message .action {
@@ -92,7 +92,7 @@ div.player{
 	background: #253E72;
 	box-shadow: black 0px 1px 2px;
 	z-index: 1;
-	min-height: 44px;
+	min-height: 54px;
 	display: -webkit-flex; display: flex;
 	justify-content: space-between;
 	-webkit-justify-content: space-between;
@@ -297,14 +297,13 @@ color: #666;
 }
 
 #room_author_note {
-margin: 10px 10px;
+margin: 10px 15px;
 padding: 5px 15px;
 color: #5A5757;
 font-size: 11px;
 background: #D9DBE7;
 border-radius: 3px;
 box-shadow: #99a 0px 0px 3px 1px;
-line-height: 0.8em;
 }
 
 div.panel > button {
@@ -359,15 +358,16 @@ line-height: 20px;
 }
 
 button.toggle_room_add_options {
-  border: none;
   -webkit-appearance: none;
-  background: #ccf;
   margin: 2px;
-  -webkit-transition: -webkit-transform 0.2s;
-  width: 40px;
+  -webkit-transition: -webkit-transform 0.22s ease-in-out;
+  width: 54px;
   font-size: 20px;
   color: black;
-  margin-bottom: 0px;
+  text-align: center;
+  border-radius: 5px;
+  border: solid thin #999;
+  background: transparent;
 }
 
 button.toggle_room_add_options.open {
@@ -397,4 +397,9 @@ button.toggle_room_add_options.open {
   text-decoration: underline;
   color: blue;
   text-transform: lowercase;
+}
+
+#chatbar {
+  background: #ccc;
+  min-height: 54px;
 }
