--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ form{ margin: 0; }
 .page > div{ -webkit-flex: 0 0 auto; flex: 0 0 auto; }
 .row{ display: -webkit-flex; display: flex; position: relative; }
 .expando{ -webkit-flex: auto; flex: auto; }
-.page > .expando { -webkit-flex: auto; flex: auto; overflow-y: auto; -webkit-overflow-scrolling: touch; }
+.page > .expando { -webkit-flex: auto; flex: auto; overflow-y: scroll; -webkit-overflow-scrolling: touch; }
 .page .panel { background: #ccf; padding: 10px; }
 .tight.panel { padding: 2px 10px; }
 header h3, .panel h3 {
