--- a/styles.css
+++ b/styles.css
@@ -367,18 +367,20 @@ button.toggle_room_add_options {
   -webkit-appearance: none;
   padding:0;
   -webkit-transition: -webkit-transform 0.22s ease-in-out;
-  width: 40px;
-  height: 40px;
-  font-size: 20px;
+  width: 30px;
+  height: 30px;
+  font-size: 24px;
   color: black;
   text-align: center;
   border-radius: 50px;
   border: solid thin #999;
   background: white;
-   -webkit-align-self: center; align-self: center; 
+   -webkit-align-self: center; align-self: center;
    flex: 0 0 auto;
    -webkit-flex: 0 0 auto;
    margin: 0px 5px;
+   line-height: 0em;
+   font-weight: bold;
 }
 
 button.toggle_room_add_options.open {
